# mlx-interp

./: .gitignore  README.md  RUNS.md  pyproject.toml  requirements.txt
examples/: README_concept_swap.md  concept_swap_full_results.json  concept_swap_vignette.py
experiments/: chat.py  color_blind.py  confound_control.py  find_assistant_axis.py  multi_axis_test.py  rigorous_suite.py  rigorous_test.py  run_experiment.py  sycophancy_3way.py  sycophancy_diagnostic.py  sycophancy_proper.py  test_concept_swap.py  test_contamination.py  test_generation.py  test_probe.py  test_probe_large.py  test_pruning.py  test_steering.py  test_sycophancy.py  tests.py
experiments/001-gemma4-cross-model/: EXPERIMENT.md
experiments/results/: confound-control-20260414-223738.json  sycophancy-3way-20260414-221052.json
mlx_interp/: __init__.py  analysis.py  capture.py  steering.py
tests/: test_core.py
tools/: concept_swap_explorer.py  theme.py
tools/templates/: concept_swap_explorer.html
