[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-interp"
version = "0.1.0"
description = "Activation capture, concept probing, and behavioral steering for MLX language models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.20.0",
    "mlx-lm>=0.20.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.10.0",
    "flask>=2.0.0",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["mlx_interp*"]
exclude = ["experiments*", "tests*", "data*", "docs*"]
